<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBF1"
    tools:context="com.project.achemei.Activities.ProfileActivity">

    <RelativeLayout
        android:id="@+id/company_layout"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/company_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:adjustViewBounds="true"
            android:alpha="0.25"
            android:background="@color/cardview_light_background"
            android:contentDescription="@string/profile_image"
            android:scaleType="centerCrop"
            android:src="@drawable/playstore_icon" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/logo_da_empresa"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/company_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView"
            android:layout_gravity="bottom"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:text="@string/company_name"
            android:textColor="@color/textColorPrimary"
            android:textSize="18sp" />

    </RelativeLayout>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/company_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/company_layout">


        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/tab_color_selector"
            app:tabGravity="fill"
            app:tabIndicatorColor="#000000"
            app:tabMode="fixed"
            app:tabSelectedTextColor="#000000"
            app:tabTextColor="#FFC100">

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/tab_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/company_appbar"></android.support.v4.view.ViewPager>
</RelativeLayout>
